Update Buổi 16 - Thực hành hàm.ipynb

--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -183,6 +183,186 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d859a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xoa_chuoi(a, b):\n",
+    "    for i in a:\n",
+    "        if i + a[:len(b) + 1] == b:\n",
+    "            a = a[:len(b)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4211566d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xin chào ,  có khỏe không hả ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"xin chào các bạn, các bạn có khỏe không hả các bạn?\"\n",
+    "b = \"các bạn\"\n",
+    "\n",
+    "def xoa_chuoi(a, b):\n",
+    "    for i in range(len(a) - len(b)):\n",
+    "        if a[i:i + len(b)] == b:\n",
+    "            a = a[:i] + a[i + len(b):]\n",
+    "    return b\n",
+    "\n",
+    "chuoi3 = xoachuoi(chuoi1,chuoi2)\n",
+    "print(chuoi3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d001f606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xin chào các bạn có khỏe không?\n"
+     ]
+    }
+   ],
+   "source": [
+    "chuoi1 = \"xin chào các bạncác bạn có khỏe không?\"\n",
+    "chuoi2 = \"các bạn\"\n",
+    "\n",
+    "def xoachuoi(chuoi1, chuoi2):\n",
+    "    a = len(chuoi1)\n",
+    "    b = len(chuoi2)\n",
+    "    for i in range(a - b):\n",
+    "        if chuoi1[i:i+b] == chuoi2:\n",
+    "            chuoi1 = chuoi1[:i] + chuoi1[i+b:]\n",
+    "    return chuoi1\n",
+    "\n",
+    "chuoi3 = xoachuoi(chuoi1,chuoi2)\n",
+    "print(chuoi3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "99a3dcb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xin chào các bạn có khỏe không?\n"
+     ]
+    }
+   ],
+   "source": [
+    "chuoi1 = \"xin chào các bạncác bạn có khỏe không?\"\n",
+    "chuoi2 = \"các bạn\"\n",
+    "\n",
+    "def xoachuoi(chuoi1, chuoi2):\n",
+    "    a = len(chuoi1)\n",
+    "    b = len(chuoi2)\n",
+    "    for i in range(a - b):\n",
+    "        if chuoi1[i:i+b] == chuoi2:\n",
+    "            chuoi1 = chuoi1[:i] + chuoi1[i+b:]\n",
+    "    return chuoi1\n",
+    "\n",
+    "chuoi3 = xoachuoi(chuoi1,chuoi2)\n",
+    "print(chuoi3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a25ed403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xin chào ,  có khỏe không hả ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "chuoi1 = \"xin chào các bạn, các bạn có khỏe không hả các bạn?\"\n",
+    "chuoi2 = \"các bạn\"\n",
+    "\n",
+    "def xoa_chuoi(chuoi1, chuoi2):\n",
+    "    a = len(chuoi1)\n",
+    "    b = len(chuoi2)\n",
+    "    i = 0 \n",
+    "    while i < (a - b):\n",
+    "        if chuoi1[i:i + b] == chuoi2:\n",
+    "            chuoi1 = chuoi1[:i] + chuoi1[i + b:]\n",
+    "            a -= b\n",
+    "        else:\n",
+    "            i += 1\n",
+    "    return chuoi1\n",
+    "\n",
+    "chuoi3 = xoa_chuoi(chuoi1, chuoi2)\n",
+    "print(chuoi3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8858fe31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Có b trong a\n",
+      "Có b trong a\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'xin chào ,  có khỏe không?'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def xoachuoi(a,b):\n",
+    "    c = \"\"\n",
+    "    ito = 0\n",
+    "    for i in range(len(a)-len(b)):\n",
+    "        if i < ito:\n",
+    "            continue\n",
+    "        if a[i:i+len(b)] == b:\n",
+    "            print('Có b trong a')\n",
+    "            ito = i+len(b)\n",
+    "        else:\n",
+    "            c += a[i]\n",
+    "    return c + a[len(a)-len(b):]\n",
+    "            \n",
+    "a = \"xin chào các bạn, các bạn có khỏe không?\"\n",
+    "b = \"các bạn\"\n",
+    "\n",
+    "xoachuoi(a,b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d626394e",
    "metadata": {},
@@ -198,17 +378,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "875d88f5",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập mật khẩu dzô nè: Bodoi@123\n",
+      "Nhập mật khẩu dzô nè: Nhims @ 612002\n",
       "True\n"
      ]
     }
@@ -233,11 +411,11 @@
     "            \n",
     "    kiem_tra = kiem_tra_1 and kiem_tra_2 and kiem_tra_3 and kiem_tra_4\n",
     "    \n",
-    "    print(kiem_tra)\n",
+    "    return kiem_tra\n",
     "    \n",
     "mat_khau = input(\"Nhập mật khẩu dzô nè: \")\n",
     "\n",
-    "kiem_tra_mat_khau(mat_khau)"
+    "print(kiem_tra_mat_khau(mat_khau))"
    ]
   },
   {
@@ -624,84 +802,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0b699e33",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Nhập số a:  13\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Nhập số b:  6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Nhập số c:  4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Nhập số d:  371\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Nhập vào một chuỗi:  chuoi123ne45nha6\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 78>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     74\u001b[0m             chuoi \u001b[38;5;241m=\u001b[39m chuoi[i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m     76\u001b[0m     \u001b[38;5;28mprint\u001b[39m(so)\n\u001b[1;32m---> 78\u001b[0m \u001b[43mloc_so_va_kiem_tra\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchuoi\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mloc_so_va_kiem_tra\u001b[1;34m(chuoi)\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m so_chinh_phuong(so) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m     S \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m so\n\u001b[1;32m---> 70\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mso_armstrong\u001b[49m\u001b[43m(\u001b[49m\u001b[43mso\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     71\u001b[0m     S \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     73\u001b[0m so \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mso_armstrong\u001b[1;34m(d)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mso_armstrong\u001b[39m(d): \u001b[38;5;66;03m# Tạo hàm kiểm tra số Armstrong\u001b[39;00m\n\u001b[0;32m     42\u001b[0m     tong \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m---> 43\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m d:\n\u001b[0;32m     44\u001b[0m         tong \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(i) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(d)\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mint\u001b[39m(d) \u001b[38;5;241m==\u001b[39m tong:\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "Nhập số a: 13\n",
+      "True\n",
+      "Nhập số b: 6\n",
+      "True\n",
+      "Nhập số c: 4\n",
+      "True\n",
+      "Nhập số d: 153\n",
+      "True\n",
+      "Nhập vào một chuỗi: AB25SDc5DSjjh52\n",
+      "5.0\n"
      ]
     }
    ],
@@ -713,9 +833,9 @@
     "            if a % i == 0:\n",
     "                flag = False\n",
     "    if flag and a > 1:\n",
-    "        return flag\n",
+    "        return True\n",
     "    else:\n",
-    "        return flag\n",
+    "        return False\n",
     "    \n",
     "a = int(input(\"Nhập số a: \")) # Nhập số để kiểm tra số nguyên tố\n",
     "\n",
@@ -775,16 +895,104 @@
     "                S -= so\n",
     "            elif so_chinh_phuong(so) == True:\n",
     "                S /= so\n",
-    "            elif so_armstrong(so) == True:\n",
+    "            elif so_armstrong(str(so)) == True:\n",
     "                S = 0\n",
     "            \n",
     "            so = \"\"\n",
-    "            chuoi = chuoi[i + 1:]\n",
+    "            chuoi = chuoi[chuoi.index(i):]\n",
     "\n",
-    "    print(so)\n",
+    "    print(S)\n",
     "    \n",
     "loc_so_va_kiem_tra(chuoi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1b454bb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def so_hoan_hao(b): # Hàm kiểm tra số hoàn hảo\n",
+    "    tong = 0\n",
+    "    for i in range(1, b):\n",
+    "        if b % i == 0:\n",
+    "            tong += i\n",
+    "            \n",
+    "    if tong == b and b > 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "so_hoan_hao(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f194f188",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def scp(a):\n",
+    "    if (a**0.5)%1 == 0:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "scp(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2d122630",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m123\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f620abe3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
