--- a/Buổi 16 - Thực hành hàm.ipynb
+++ b/Buổi 16 - Thực hành hàm.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "8858fe31",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "'xin chào ,  có khỏe không hả các bạn'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
     "    c = \"\"\n",
     "    ito = 0\n",
     "    for i in range(len(a) - len(b)):\n",
-    "        if i <= ito:\n",
+    "        if i < ito:\n",
     "            continue\n",
     "        if a[i:i + len(b)] == b:\n",
     "            print('Có b trong a')\n",
