--- a/Buổi 17 - Thực hành hàm 2.ipynb
+++ b/Buổi 17 - Thực hành hàm 2.ipynb
@@ -40,11 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f5fc915a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập chuỗi: ABcde456asd@34!@avd^%\n",
+      "Bạn muốn chạy hàm 1, 2 hay 3? Nhập vào \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Nhập chuỗi: \")\n",
+    "choice = int(input(\"\"\"Bạn muốn chạy hàm 1, 2 hay 3? Nhập vào \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: \"\"\"))\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
