--- a/Buổi 17 - Thực hành hàm 2.ipynb
+++ b/Buổi 17 - Thực hành hàm 2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f5fc915a",
    "metadata": {},
    "outputs": [
@@ -49,14 +49,68 @@
      "output_type": "stream",
      "text": [
       "Nhập chuỗi: ABcde456asd@34!@avd^%\n",
-      "Bạn muốn chạy hàm 1, 2 hay 3? Nhập vào \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 3\n"
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 1\n",
+      "ABcdeasdavd\n",
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 2\n",
+      "456,34\n",
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 4\n",
+      "Yêu cầu nhập lại: 3\n",
+      "@ ! @ ^ %\n",
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 3\n",
+      "@ ! @ ^ %\n",
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 2\n",
+      "456,34\n",
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 1\n",
+      "ABcdeasdavd\n",
+      "Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: 0\n",
+      "Bạn đã ngừng chương trình.\n"
      ]
     }
    ],
    "source": [
     "a = input(\"Nhập chuỗi: \")\n",
-    "choice = int(input(\"\"\"Bạn muốn chạy hàm 1, 2 hay 3? Nhập vào \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: \"\"\"))\n",
-    "\n"
+    "choice = input(\"\"\"Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: \"\"\")\n",
+    "\n",
+    "def ham1():\n",
+    "    temp = \"\"\n",
+    "    for i in a:\n",
+    "        if i.isalpha():\n",
+    "            temp += i\n",
+    "    return temp\n",
+    "    \n",
+    "def ham2():\n",
+    "    tmp1 = \"\"\n",
+    "    tmp2 = \"\"\n",
+    "    for i in a:\n",
+    "        if i.isdigit():\n",
+    "            tmp1 += i\n",
+    "        elif tmp1 != \"\":\n",
+    "            tmp2 += tmp1 + \",\"\n",
+    "            tmp1 = \"\"\n",
+    "    return tmp2[:-1]\n",
+    "\n",
+    "def ham3():\n",
+    "    temp = \"\"\n",
+    "    for i in a:\n",
+    "        if not i.isalpha() and not i.isdigit():\n",
+    "            temp += i + \" \"\n",
+    "    return temp[:-1]\n",
+    "\n",
+    "while True:\n",
+    "    if choice == \"1\":\n",
+    "        print(ham1())\n",
+    "        choice = input(\"\"\"Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: \"\"\")\n",
+    "    elif choice == \"2\":\n",
+    "        print(ham2())\n",
+    "        choice = input(\"\"\"Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: \"\"\")\n",
+    "    elif choice == \"3\":\n",
+    "        print(ham3())\n",
+    "        choice = input(\"\"\"Nhập hàm \"1\", \"2\" hoặc \"3\". Nhập \"0\" để dừng chương trình: \"\"\")\n",
+    "    elif choice == \"0\":\n",
+    "        print(\"Bạn đã ngừng chương trình.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        choice = input(\"Yêu cầu nhập lại: \")"
    ]
   },
   {
