Update Buổi 17 - Thực hành hàm 2.ipynb

--- a/Buổi 17 - Thực hành hàm 2.ipynb
+++ b/Buổi 17 - Thực hành hàm 2.ipynb
@@ -302,6 +302,76 @@
     "        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f31d660d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số: 3748\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = input(\"Nhập số: \")\n",
+    "\n",
+    "def so_don_dieu():\n",
+    "    count = 1\n",
+    "\n",
+    "    for i in range(0, len(N) - 2, 2):\n",
+    "        if int(N[i]) < int(N[i + 1]):\n",
+    "            count += 1\n",
+    "\n",
+    "            if int(N[i + 1]) > int(N[i + 2]):\n",
+    "                count += 1\n",
+    "\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        elif int(N[i]) > int(N[i + 1]):\n",
+    "            count += 1\n",
+    "\n",
+    "            if int(N[i + 1]) < int(N[i + 2]):\n",
+    "                count +=  1\n",
+    "\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        else:\n",
+    "            break\n",
+    "    return count\n",
+    "\n",
+    "print(so_don_dieu())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82194802",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10,2):\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
