Update Buổi 18 - Thực hành hàm 3.ipynb

--- a/Buổi 18 - Thực hành hàm 3.ipynb
+++ b/Buổi 18 - Thực hành hàm 3.ipynb
@@ -18,11 +18,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "112a50d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số km: 20\n",
+      "250000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tien_taxi():\n",
+    "    km = float(input(\"Nhập số km: \"))\n",
+    "    \n",
+    "    if km <= 1:\n",
+    "        don_gia = 15000\n",
+    "    elif km <= 10:\n",
+    "        don_gia = 14000\n",
+    "    elif km <= 20:\n",
+    "        don_gia = 12500\n",
+    "    elif km <= 30:\n",
+    "        don_gia = 11000\n",
+    "    else:\n",
+    "        don_gia = 9000\n",
+    "        \n",
+    "    tong_tien = don_gia * km\n",
+    "    \n",
+    "    return tong_tien\n",
+    "\n",
+    "print(tien_taxi())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
