Update Buổi 18 - Thực hành hàm 3.ipynb

--- a/Buổi 18 - Thực hành hàm 3.ipynb
+++ b/Buổi 18 - Thực hành hàm 3.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "id": "f13965b3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Bài 1\n",
     "\n",
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "84b992c7",
    "metadata": {},
    "outputs": [
@@ -51,7 +54,9 @@
   {
    "cell_type": "markdown",
    "id": "7c40ebdb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Bài 2\n",
     "\n",
@@ -77,7 +82,10 @@
   {
    "cell_type": "markdown",
    "id": "4c877020",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "\n",
     "### Bài 3\n",
