--- a/Buổi 18 - Thực hành hàm 3.ipynb
+++ b/Buổi 18 - Thực hành hàm 3.ipynb
@@ -67,16 +67,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b8b6af8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "785\n"
+     ]
+    }
+   ],
    "source": [
-    "def tienkm():\n",
-    "    n = input(\"Nhập số n: \")\n",
-    "    k = input(\"Nhập số k: \")\n",
-    "    \n",
-    "    "
+    "n = 724585\n",
+    "k = 2\n",
+    "\n",
+    "def xoachuoi(s, i):\n",
+    "    return s[:i] + s[i + 1:]\n",
+    "\n",
+    "def tienkm(n, k):\n",
+    "    n = str(n)\n",
+    "    for i in range(k):\n",
+    "        for j in range(0, len(n) - 1):\n",
+    "            if n[j] < n[j + 1]:\n",
+    "                n = xoachuoi(n, j)\n",
+    "                break\n",
+    "    return n\n",
+    "                \n",
+    "print(tienkm(n, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f2ccf50e-deea-4ba4-bcdd-bc5974773ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "785\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 724585\n",
+    "k = 2\n",
+    "\n",
+    "def xoachuoi(s, i):\n",
+    "    return s[:i] + s[i + 1:]\n",
+    "\n",
+    "def tienkm(n, k):\n",
+    "    n = str(n)\n",
+    "    j = 0\n",
+    "    while True:\n",
+    "        if n[j] < n[j + 1]:\n",
+    "            n = xoachuoi(n, j)\n",
+    "            k -= 1\n",
+    "            if k == 0:\n",
+    "                break\n",
+    "        else:\n",
+    "            j += 1\n",
+    "            if j >= len(n) - 1:\n",
+    "                break\n",
+    "    if k > 0:\n",
+    "        n = n[:-k]\n",
+    "    return n\n",
+    "                \n",
+    "print(tienkm(n, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e9bb1ea6-32f7-455f-b645-696a0b275c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75123\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"758123\"\n",
+    "def xoachuoi(s,i):\n",
+    "    s = s[:i] + s[i+1:]\n",
+    "    return s\n",
+    "s = xoachuoi(s,2)\n",
+    "print(s)"
    ]
   },
   {
@@ -108,18 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "6e1fcaf0",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập a:  0\n",
+      "Nhập b:  10\n",
+      "Nhập c:  15\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập a: 10\n",
-      "Nhập b: 1\n",
-      "Nhập c: 4\n",
-      "7\n"
+      "5\n"
      ]
     }
    ],
@@ -145,8 +234,8 @@
     "        return b + k1\n",
     "    elif k1 == k2:\n",
     "        return c + k1\n",
-    "    else:\n",
-    "        return None\n",
+    "    \n",
+    "    return None\n",
     "    \n",
     "print(timcsc())"
    ]
