Update Vẽ nhà sun cây.ipynb

--- a/Learn/Biến, kiểu dữ liệu và toán tử/Vẽ nhà sun cây.ipynb
+++ b/Learn/Biến, kiểu dữ liệu và toán tử/Vẽ nhà sun cây.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "73daaac0",
    "metadata": {},
    "outputs": [],
    "source": [
     "from turtle import *\n",
     "bgcolor('turquoise')\n",
-    "speed(0)\n",
+    "speed(1)\n",
     "pu()\n",
     "goto(-300, -300)\n",
     "pd()\n",
@@ -154,7 +154,7 @@
     "\tlt(90)\n",
     "\tcircle(e, 45)\n",
     "\n",
-    "done()\n"
+    "done()"
    ]
   }
  ],
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
