--- a/Text to speech.ipynb
+++ b/Text to speech.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "97616c7a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gtts'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Import the required module for text \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# to speech conversion\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgtts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m gTTS\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# This module is imported so that we can \u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# play the converted audio\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gtts'"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -28,10 +27,96 @@
     "import os\n",
     "  \n",
     "# The text that you want to convert to audio\n",
-    "mytext = \"\"\"\"\"\"\n",
+    "mytext = \"\"\"Mục tiêu\n",
+    "\n",
+    "Luyện tập cách tạo và sử dụng hàm trong lập trình, ôn lại hàm if…elif..else\n",
+    "\n",
+    "Mô tả\n",
+    "\n",
+    "Viết chương trình cho phép người dùng thêm hoặc xoá các mục chi tiêu cá nhân và in ra các mục chi tiêu đó. Mục chi tiêu bao gồm: tên, giá trị chi và ngày chi\n",
+    "\n",
+    "Hướng dẫn\n",
+    "\n",
+    "Bước 1: Khởi tạo hàm thêm mục chi tiêu, nhận hai tham số là mảng chi tiêu hiện tại và mục chi tiêu mới.\n",
+    "\n",
+    "Dùng hàm append() để thêm item mới vào mảng\n",
+    "def add_item(myTempList, item):    \n",
+    "    myTempList.append(item)\n",
+    "Bước 2: Khởi tạo hàm tìm index của phần tử trong mảng, nhận hai tham số là mảng chi tiêu hiện tại và tên của khoản chi tiêu cần tìm\n",
+    "\n",
+    "Để thực hiện được việc xoá khoản chi tiêu, cần phải tìm được vị trí index của phần tử đó trong mảng trước thông qua tên của phần \n",
+    "Khởi tạo biến result với giá trị khởi tạo bằng -1, giá trị này sẽ mang kết quả là vị trí index của phần tử cần tìm.\n",
+    "Dùng hàm len() để lấy độ dài của mảng, sau đó gán giá trị này cho biến length\n",
+    "Dùng hàm for…in range() để taọ vòng lặp lặp qua từng phần tử của mảng chi tiêu. Giá trị lặp tạm gọi là i, giá trị này tương ứng với vị trí index của phần tử trong mảng.\n",
+    "Trong mỗi vòng lặp, dùng if để kiểm tra tên của phần tử đang được lấy có bằng với tên phần tử được nhập vào hay không. Nếu đúng thì gán giá trị i cho biến result\n",
+    "myTempList[i] là phần tử tương ứng tại vị trí i\n",
+    "myTempList[i][‘name’] là tên của phần tử đang được gọi trong vòng lặp\n",
+    "Kết thúc vòng lặp trả về biến result\n",
+    "def find_index_item(myTempList, item_name):\n",
+    "    result = -1\n",
+    "    length = len(myTempList)\n",
+    "    for i in range(length):\n",
+    "        if myTempList[i]['name'] == item_name:\n",
+    "            result = i\n",
+    "    return result\n",
+    "Bước 3: Khởi tạo hàm xoá phần tử khỏi mảng chi tiêu, nhận hai tham số là mảng hiện tại và tên của khoản chi tiêu muốn xoá\n",
+    "\n",
+    "Dùng if…else để kiểm tra hai trường hợp:\n",
+    "Gọi hàm tìm index của khoản chi tiêu muốn xoá và kết quả hàm trả về  lớn hơn -1 (tìm thấy phần tử trong mảng)\n",
+    "Gọi hàm tìm index của khoản chi tiêu muốn xoá và kết quả hàm trả về bé hơn hoặc bằng -1 (không tìm thấy phần tử trong mảng)\n",
+    "Nếu trường hợp tìm thấy phần tử trong mảng thì dùng phương thức del để xoá phần tử đó khỏi mảng chi tiêu.\n",
+    "Nếu không tìm thấy thì dùng hàm print() in ra thông báo không có phần tử trong mảng\n",
+    "def remove_item(myTempList, item_name):\n",
+    "    if find_index_item(myTempList, item_name) > -1:\n",
+    "        del myTempList[find_index_item(myTempList, item_name)]\n",
+    "    else:\n",
+    "        print(item_name + \" not in list\")\n",
+    "Bước 4: In mảng chi tiêu hiện tại và lấy yêu cầu muốn thêm hay xoá của người dùng\n",
+    "\n",
+    "Dùng hàm print() để in ra mảng chi tiêu hiện tại\n",
+    "print(\"Your expenses:\", expenses)\n",
+    "\n",
+    "Dùng hàm print() để in ra các phương thức mà người dùng có thể chọn\n",
+    "print(\"What do you want to do? -\\n\"\\\n",
+    "        \"1. Add\\n\" \\\n",
+    "        \"2. Remove\")\n",
+    "Dùng hàm input() để lấy yêu cầu từ người dùng, sau đó dùng int() để chuyển giá trị về kiểu int, sau đó gán giá trị cho biến option\n",
+    "option = int(input(\"Select option 1 or 2: \"))\n",
+    "\n",
+    "Dùng hàm input() để lấy tên khoản chi từ người dùng, sau đó gán giá trị cho biến name_ input\n",
+    "name_input = input(\"Item name: \")\n",
+    "\n",
+    "Bước 5: Kiểm tra yêu cầu của người dùng và gọi hàm tương ứng\n",
+    "\n",
+    "Dùng if…elif…else để kiểm tra giá trị biến option và chia thành ba trường hợp\n",
+    "Trường hợp 1: giá trị option bằng 1\n",
+    "Trường hợp 2: giá trị option bằng 2\n",
+    "Trường hợp 3: giá trị option khác 1 và 2\n",
+    "Đối với trường hợp 1: Thực hiện việc thêm item vào mảng chi tiêu cho sẵn\n",
+    "Dùng hàm input() để lấy giá trị chi của khoản chi mới, dùng int() để chuyển về kiểu int và gán giá trị cho biến cost_input\n",
+    "Dùng hàm input() để lấy ngày chi của khoản chi mới và gán giá trị cho biến date_ input\n",
+    "Tạo giá trị kiểu dictionary và gán giá trị cho biến item, keyword argument sẽ lần lượt là name:name_ input, cost:cost_ input, date:date_ input\n",
+    "Gọi hàm add_item(), truyền mảng chi tiêu hiện tại và biến item làm tham số\n",
+    "Dùng hàm print() in ra mảng chi tiêu sau khi đã cập nhật\n",
+    "Đối với trường hợp 2: Thực hiện việc xoá phần tử khỏi mảng chi tiêu hiện tại\n",
+    "Gọi hàm remove_item(), truyền mảng chi tiêu hiện tại và biến name_input làm tham số\n",
+    "Dùng hàm print() in ra mảng chi tiêu sau khi đã cập nhật\n",
+    "Đối với trường hợp 3: Yêu cầu người dùng không tồn tại\n",
+    "Dùng print() in ra thông báo đầu vào không hợp lệ\n",
+    "if option == 1:\n",
+    "    cost_input = int(input(\"Item cost: \"))\n",
+    "    date_input = input(\"Date: \")\n",
+    "    item = {'name': name_input, 'cost':cost_input, 'date':date_input}\n",
+    "    add_item(expenses, item)\n",
+    "    print(\"Your expenses: \", expenses)\n",
+    "elif option == 2:\n",
+    "    remove_item(expenses, name_input)\n",
+    "    print(\"Your expenses: \", expenses)\n",
+    "else:\n",
+    "    print(\"Invalid input\")\"\"\"\n",
     "  \n",
     "# Language in which you want to convert\n",
-    "language = 'en'\n",
+    "language = 'vi'\n",
     "  \n",
     "# Passing the text and language to the engine, \n",
     "# here we have marked slow=False. Which tells \n",
@@ -46,6 +131,14 @@
     "# Playing the converted file\n",
     "os.system(\"mpg321 tts.mp3\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a83c1b61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
