--- a/Demos.ipynb
+++ b/Demos.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1d39e7de",
+   "id": "49e5640d",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91217e1a",
+   "id": "0d1bd19f",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "835899e9",
+   "id": "dd60e2de",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7a07979c",
+   "id": "3ef1df3e",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5788db2f",
+   "id": "1247dff2",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cceef605",
+   "id": "dbbbad1b",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96220bb2",
+   "id": "f8fe3dd9",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1794d844",
+   "id": "e2d53577",
    "metadata": {
     "tags": [
      "Headings"
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "721ed0f8",
+   "id": "aefd3a87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "233c4ea9",
+   "id": "9517e011",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e710e3cb",
+   "id": "12122350",
    "metadata": {
     "tags": [
      "Comment",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "90f7dabe",
+   "id": "697bda42",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "96a59538",
+   "id": "e5ea8e7c",
    "metadata": {
     "tags": [
      "Sai"
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e637c105",
+   "id": "8b0f8b11",
    "metadata": {
     "tags": [
      "Đúng"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c9fb6bba",
+   "id": "d328d4ad",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "02788c85",
+   "id": "5671ec10",
    "metadata": {
     "tags": [
      "Sai"
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "40e6b7ea",
+   "id": "2386e4d9",
    "metadata": {
     "tags": [
      "Đúng"
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9999467f",
+   "id": "b48052fd",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5c8cf077",
+   "id": "f52a57f8",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e0c705bb",
+   "id": "32f67503",
    "metadata": {
     "tags": [
      "Vẽ",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b59eeae",
+   "id": "c6ab5806",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb687f9c",
+   "id": "934aea7d",
    "metadata": {},
    "outputs": [
     {
@@ -535,8 +535,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "6be9b877",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line 1\n",
+      "This is line 2\n",
+      "This is line 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "paragraph = \"\"\"This is line 1\n",
+    "This is line 2\n",
+    "This is line 3\"\"\"\n",
+    "\n",
+    "print(paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "209b4456",
+   "id": "2ff2633b",
    "metadata": {},
    "outputs": [],
    "source": []
