--- a/Buổi 21 - Dictionnary.ipynb
+++ b/Buổi 21 - Dictionnary.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "af64832c",
    "metadata": {},
    "outputs": [
@@ -406,6 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Những', 'tấm', 'ảnh', 'tôi', 'mang', 'về', 'đã', 'được', 'chọn', 'lấy', 'một', 'tấm', 'Trưởng', 'phòng', 'rất', 'bằng', 'lòng', 'về', 'tôi', 'Không', 'những', 'trong', 'bộ', 'lịch', 'năm', 'ấy', 'mà', 'mãi', 'mãi', 'về', 'sau', 'tấm', 'ảnh', 'chụp', 'của', 'tôi', 'vẫn', 'còn', 'được', 'treo', 'ở', 'nhiều', 'nơi', 'nhất', 'là', 'trong', 'các', 'gia', 'đình', 'sành', 'nghệ', 'thuật', 'Quái', 'lạ', 'tuy', 'là', 'ảnh', 'đen', 'trắng', 'nhưng', 'mỗi', 'lần', 'ngắm', 'kỹ', 'tôi', 'vẫn', 'thấy', 'hiện', 'lên', 'cái', 'màu', 'hồng', 'hồng', 'của', 'ánh', 'sương', 'mai', 'lúc', 'bấy', 'giờ', 'tôi', 'nhìn', 'thấy', 'từ', 'bãi', 'xe', 'tăng', 'hỏng', 'và', 'nếu', 'nhìn', 'lâu', 'hơn', 'bao', 'giờ', 'tôi', 'cũng', 'thấy', 'người', 'đàn', 'bà', 'ấy', 'đang', 'bước', 'ra', 'khỏi', 'tấm', 'ảnh', 'đó', 'là', 'một', 'người', 'đàn', 'bà', 'vùng', 'biển', 'cao', 'lớn', 'với', 'những', 'đường', 'nét', 'thô', 'kệch', 'tấm', 'lưng', 'áo', 'bạc', 'phếch', 'có', 'miếng', 'vá', 'nửa', 'thân', 'dưới', 'ướt', 'sũng', 'khuôn', 'mặt', 'rỗ', 'đã', 'nhợt', 'trắng', 'vì', 'kéo', 'lưới', 'suốt', 'đêm', 'Mụ', 'bước', 'những', 'bước', 'chậm', 'rãi', 'bàn', 'chân', 'dậm', 'trên', 'mặt', 'đất', 'chắc', 'chắn', 'hòa', 'lẫn', 'trong', 'đám', 'đông']\n",
       "Những: 1\n",
       "tấm: 5\n",
       "ảnh: 4\n",
@@ -545,6 +546,8 @@
     "    text = text.replace(i, '')\n",
     "    \n",
     "L = text.split()\n",
+    "\n",
+    "print(L)\n",
     "\n",
     "for i in L:\n",
     "    if i in D:\n",
