--- a/Buổi 22 - Thực hành Dictionary.ipynb
+++ b/Buổi 22 - Thực hành Dictionary.ipynb
@@ -44,18 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "ff4b8cef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2, 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [2,4,5,7,9]\n",
     "\n",
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "8d0bc5c0",
    "metadata": {},
    "outputs": [
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "3ec8ec73",
    "metadata": {},
    "outputs": [],
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "e7a165eb",
    "metadata": {
     "scrolled": false
@@ -150,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key \"2nd\" có giá trị lớn nhất trong dictionary: 9\n"
+      "Key '2nd' có giá trị lớn nhất trong dictionary: 9\n"
      ]
     }
    ],
@@ -170,7 +162,7 @@
     "            maxi = D[i]\n",
     "            result = i\n",
     "            \n",
-    "    return \"Key \" + \"\\\"\" + result + \"\\\"\" + \" có giá trị lớn nhất trong dictionary: \" + str(maxi)\n",
+    "    return \"Key '\" + result + \"' có giá trị lớn nhất trong dictionary: \" + str(maxi)\n",
     "\n",
     "print(maximum(D))"
    ]
@@ -203,11 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5ff9a0e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "D = {'Str1': 'Chuỗi gì đây', 'Str2': 'ơi chuỗi', 'Str3': 'gì đây?'}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,11 +213,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b3c2194d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Giá trị của key 'Str1' có độ dài chuỗi là lớn nhất!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_len(D):\n",
+    "    max_len = 0\n",
+    "\n",
+    "    for i in D:\n",
+    "        if max_len < len(D[i]):\n",
+    "            max_len = len(D[i])\n",
+    "\n",
+    "    for i in D:\n",
+    "        if len(D[i]) == max_len:\n",
+    "            return \"Giá trị của key '\" + str(i) + \"' có độ dài chuỗi là lớn nhất!\"\n",
+    "\n",
+    "print(max_len(D))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,11 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7573ae07",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "colors = [\"đen\", \"vàng\", \"xanh\", \"vàng\", \"xanh\", \"đỏ\", \"hồng\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,11 +300,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3e3cdf86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coded_ones = {}\n",
+    "coded = []\n",
+    "code = 0\n",
+    "\n",
+    "for color in colors:\n",
+    "        if color not in coded_ones:\n",
+    "                coded_ones[color] = code\n",
+    "                code += 1\n",
+    "\n",
+    "        coded.append(coded_ones[color])\n",
+    "\n",
+    "print(coded)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -414,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit (system)",
    "language": "python",
    "name": "python3"
   },
@@ -429,6 +467,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "765a51216e5276420c5e1883caf30155d4c39b39f6dedfc93023ee2d2b60fd01"
+   }
   }
  },
  "nbformat": 4,
