--- a/Buổi 22 - Thực hành Dictionary.ipynb
+++ b/Buổi 22 - Thực hành Dictionary.ipynb
@@ -134,9 +134,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "e7a165eb",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -282,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "7573ae07",
    "metadata": {},
    "outputs": [],
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "3e3cdf86",
    "metadata": {},
    "outputs": [
@@ -353,11 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "602c7b70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "coded = [0, 1, 2, 1, 2, 3, 4]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -369,11 +369,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "df4fb3a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "<function decode at 0x00000248880C3F40>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m         decoded\u001b[38;5;241m.\u001b[39mappend(decoded[decode])\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m decoded\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoded\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Input \u001b[1;32mIn [24]\u001b[0m, in \u001b[0;36mdecode\u001b[1;34m(coded)\u001b[0m\n\u001b[0;32m      3\u001b[0m decoded \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m code \u001b[38;5;129;01min\u001b[39;00m coded:\n\u001b[1;32m----> 6\u001b[0m     decoded[decode] \u001b[38;5;241m=\u001b[39m \u001b[43mdecodes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m      7\u001b[0m     decoded\u001b[38;5;241m.\u001b[39mappend(decoded[decode])\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m decoded\n",
+      "\u001b[1;31mKeyError\u001b[0m: <function decode at 0x00000248880C3F40>"
+     ]
+    }
+   ],
+   "source": [
+    "def decode(coded):\n",
+    "    decodes = {'đen': 0, 'vàng': 1, 'xanh': 2, 'đỏ': 3, 'hồng': 4}\n",
+    "    decoded = []\n",
+    "    \n",
+    "    for code in coded:\n",
+    "        decoded[decode] = decodes[code]\n",
+    "        decoded.append(decoded[decode])\n",
+    "        \n",
+    "    return decoded\n",
+    "\n",
+    "print(decode(coded))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -452,7 +477,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (system)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
