--- a/Buổi 21 - Dictionnary.ipynb
+++ b/Buổi 21 - Dictionnary.ipynb
@@ -407,134 +407,7 @@
      "output_type": "stream",
      "text": [
       "['Những', 'tấm', 'ảnh', 'tôi', 'mang', 'về', 'đã', 'được', 'chọn', 'lấy', 'một', 'tấm', 'Trưởng', 'phòng', 'rất', 'bằng', 'lòng', 'về', 'tôi', 'Không', 'những', 'trong', 'bộ', 'lịch', 'năm', 'ấy', 'mà', 'mãi', 'mãi', 'về', 'sau', 'tấm', 'ảnh', 'chụp', 'của', 'tôi', 'vẫn', 'còn', 'được', 'treo', 'ở', 'nhiều', 'nơi', 'nhất', 'là', 'trong', 'các', 'gia', 'đình', 'sành', 'nghệ', 'thuật', 'Quái', 'lạ', 'tuy', 'là', 'ảnh', 'đen', 'trắng', 'nhưng', 'mỗi', 'lần', 'ngắm', 'kỹ', 'tôi', 'vẫn', 'thấy', 'hiện', 'lên', 'cái', 'màu', 'hồng', 'hồng', 'của', 'ánh', 'sương', 'mai', 'lúc', 'bấy', 'giờ', 'tôi', 'nhìn', 'thấy', 'từ', 'bãi', 'xe', 'tăng', 'hỏng', 'và', 'nếu', 'nhìn', 'lâu', 'hơn', 'bao', 'giờ', 'tôi', 'cũng', 'thấy', 'người', 'đàn', 'bà', 'ấy', 'đang', 'bước', 'ra', 'khỏi', 'tấm', 'ảnh', 'đó', 'là', 'một', 'người', 'đàn', 'bà', 'vùng', 'biển', 'cao', 'lớn', 'với', 'những', 'đường', 'nét', 'thô', 'kệch', 'tấm', 'lưng', 'áo', 'bạc', 'phếch', 'có', 'miếng', 'vá', 'nửa', 'thân', 'dưới', 'ướt', 'sũng', 'khuôn', 'mặt', 'rỗ', 'đã', 'nhợt', 'trắng', 'vì', 'kéo', 'lưới', 'suốt', 'đêm', 'Mụ', 'bước', 'những', 'bước', 'chậm', 'rãi', 'bàn', 'chân', 'dậm', 'trên', 'mặt', 'đất', 'chắc', 'chắn', 'hòa', 'lẫn', 'trong', 'đám', 'đông']\n",
-      "Những: 1\n",
-      "tấm: 5\n",
-      "ảnh: 4\n",
-      "tôi: 6\n",
-      "mang: 1\n",
-      "về: 3\n",
-      "đã: 2\n",
-      "được: 2\n",
-      "chọn: 1\n",
-      "lấy: 1\n",
-      "một: 2\n",
-      "Trưởng: 1\n",
-      "phòng: 1\n",
-      "rất: 1\n",
-      "bằng: 1\n",
-      "lòng: 1\n",
-      "Không: 1\n",
-      "những: 3\n",
-      "trong: 3\n",
-      "bộ: 1\n",
-      "lịch: 1\n",
-      "năm: 1\n",
-      "ấy: 2\n",
-      "mà: 1\n",
-      "mãi: 2\n",
-      "sau: 1\n",
-      "chụp: 1\n",
-      "của: 2\n",
-      "vẫn: 2\n",
-      "còn: 1\n",
-      "treo: 1\n",
-      "ở: 1\n",
-      "nhiều: 1\n",
-      "nơi: 1\n",
-      "nhất: 1\n",
-      "là: 3\n",
-      "các: 1\n",
-      "gia: 1\n",
-      "đình: 1\n",
-      "sành: 1\n",
-      "nghệ: 1\n",
-      "thuật: 1\n",
-      "Quái: 1\n",
-      "lạ: 1\n",
-      "tuy: 1\n",
-      "đen: 1\n",
-      "trắng: 2\n",
-      "nhưng: 1\n",
-      "mỗi: 1\n",
-      "lần: 1\n",
-      "ngắm: 1\n",
-      "kỹ: 1\n",
-      "thấy: 3\n",
-      "hiện: 1\n",
-      "lên: 1\n",
-      "cái: 1\n",
-      "màu: 1\n",
-      "hồng: 2\n",
-      "ánh: 1\n",
-      "sương: 1\n",
-      "mai: 1\n",
-      "lúc: 1\n",
-      "bấy: 1\n",
-      "giờ: 2\n",
-      "nhìn: 2\n",
-      "từ: 1\n",
-      "bãi: 1\n",
-      "xe: 1\n",
-      "tăng: 1\n",
-      "hỏng: 1\n",
-      "và: 1\n",
-      "nếu: 1\n",
-      "lâu: 1\n",
-      "hơn: 1\n",
-      "bao: 1\n",
-      "cũng: 1\n",
-      "người: 2\n",
-      "đàn: 2\n",
-      "bà: 2\n",
-      "đang: 1\n",
-      "bước: 3\n",
-      "ra: 1\n",
-      "khỏi: 1\n",
-      "đó: 1\n",
-      "vùng: 1\n",
-      "biển: 1\n",
-      "cao: 1\n",
-      "lớn: 1\n",
-      "với: 1\n",
-      "đường: 1\n",
-      "nét: 1\n",
-      "thô: 1\n",
-      "kệch: 1\n",
-      "lưng: 1\n",
-      "áo: 1\n",
-      "bạc: 1\n",
-      "phếch: 1\n",
-      "có: 1\n",
-      "miếng: 1\n",
-      "vá: 1\n",
-      "nửa: 1\n",
-      "thân: 1\n",
-      "dưới: 1\n",
-      "ướt: 1\n",
-      "sũng: 1\n",
-      "khuôn: 1\n",
-      "mặt: 2\n",
-      "rỗ: 1\n",
-      "nhợt: 1\n",
-      "vì: 1\n",
-      "kéo: 1\n",
-      "lưới: 1\n",
-      "suốt: 1\n",
-      "đêm: 1\n",
-      "Mụ: 1\n",
-      "chậm: 1\n",
-      "rãi: 1\n",
-      "bàn: 1\n",
-      "chân: 1\n",
-      "dậm: 1\n",
-      "trên: 1\n",
-      "đất: 1\n",
-      "chắc: 1\n",
-      "chắn: 1\n",
-      "hòa: 1\n",
-      "lẫn: 1\n",
-      "đám: 1\n",
-      "đông: 1\n"
+      "Những: 1, tấm: 5, ảnh: 4, tôi: 6, mang: 1, về: 3, đã: 2, được: 2, chọn: 1, lấy: 1, một: 2, Trưởng: 1, phòng: 1, rất: 1, bằng: 1, lòng: 1, Không: 1, những: 3, trong: 3, bộ: 1, lịch: 1, năm: 1, ấy: 2, mà: 1, mãi: 2, sau: 1, chụp: 1, của: 2, vẫn: 2, còn: 1, treo: 1, ở: 1, nhiều: 1, nơi: 1, nhất: 1, là: 3, các: 1, gia: 1, đình: 1, sành: 1, nghệ: 1, thuật: 1, Quái: 1, lạ: 1, tuy: 1, đen: 1, trắng: 2, nhưng: 1, mỗi: 1, lần: 1, ngắm: 1, kỹ: 1, thấy: 3, hiện: 1, lên: 1, cái: 1, màu: 1, hồng: 2, ánh: 1, sương: 1, mai: 1, lúc: 1, bấy: 1, giờ: 2, nhìn: 2, từ: 1, bãi: 1, xe: 1, tăng: 1, hỏng: 1, và: 1, nếu: 1, lâu: 1, hơn: 1, bao: 1, cũng: 1, người: 2, đàn: 2, bà: 2, đang: 1, bước: 3, ra: 1, khỏi: 1, đó: 1, vùng: 1, biển: 1, cao: 1, lớn: 1, với: 1, đường: 1, nét: 1, thô: 1, kệch: 1, lưng: 1, áo: 1, bạc: 1, phếch: 1, có: 1, miếng: 1, vá: 1, nửa: 1, thân: 1, dưới: 1, ướt: 1, sũng: 1, khuôn: 1, mặt: 2, rỗ: 1, nhợt: 1, vì: 1, kéo: 1, lưới: 1, suốt: 1, đêm: 1, Mụ: 1, chậm: 1, rãi: 1, bàn: 1, chân: 1, dậm: 1, trên: 1, đất: 1, chắc: 1, chắn: 1, hòa: 1, lẫn: 1, đám: 1, đông: 1, "
      ]
     }
    ],
@@ -556,7 +429,7 @@
     "        D[i] = 1\n",
     "\n",
     "for i in D:\n",
-    "    print(str(i) + \": \" + str(D[i]))"
+    "    print(str(i) + \": \" + str(D[i]), end = \", \")"
    ]
   },
   {
@@ -574,11 +447,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8541b8c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nhập H - hiển thị sản phẩm\n",
+      "Nhập T - thêm sản phẩm\n",
+      "Nhập S - sửa sản phẩm\n",
+      "Nhập X - xóa sản phẩm\n",
+      "Nhập 0 để thoát chương trình\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập lệnh: h\n",
+      "Nhập lệnh: l\n",
+      "Nhập lệnh: H\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------\n",
+      "\n",
+      "1: Bún bò\n",
+      "2: Phở bò\n",
+      "\n",
+      "----------------\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập lệnh: T\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng): 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID đã tồn tại, vui lòng nhập lại!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào ID (nhập 0 để thoát chức năng): 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID đã tồn tại, vui lòng nhập lại!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào ID (nhập 0 để thoát chức năng): 3\n",
+      "Nhập vào tên sản phẩm: Bún riêu\n",
+      "Nhập lệnh: H\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------\n",
+      "\n",
+      "1: Bún bò\n",
+      "2: Phở bò\n",
+      "3: Bún riêu\n",
+      "\n",
+      "----------------\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập lệnh: T\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng): 4\n",
+      "Nhập vào tên sản phẩm: Hủ tiếu\n",
+      "Nhập lệnh: H\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------\n",
+      "\n",
+      "1: Bún bò\n",
+      "2: Phở bò\n",
+      "3: Bún riêu\n",
+      "4: Hủ tiếu\n",
+      "\n",
+      "----------------\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập lệnh: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hienthisanpham(D):\n",
+    "    print(\"----------------\")\n",
+    "    print()\n",
+    "    for i in D: print(i, \": \", D[i], sep = \"\")\n",
+    "    print()\n",
+    "    print(\"----------------\")\n",
+    "    \n",
+    "def themsanpham(D):\n",
+    "    while True:\n",
+    "        ID = input(\"Nhập vào ID (nhập 0 để thoát chức năng):\")\n",
+    "        if ID == \"0\": return\n",
+    "        if ID not in D: break\n",
+    "        print(\"ID đã tồn tại, vui lòng nhập lại!\")\n",
+    "    name = input(\"Nhập vào tên sản phẩm:\")\n",
+    "    D[ID] = name\n",
+    "    \n",
+    "def suasanpham(D):\n",
+    "    while True:\n",
+    "        ID = input(\"Nhập vào ID (nhập 0 để thoát chức năng):\")\n",
+    "        if ID == \"0\": return\n",
+    "        if ID in D: break\n",
+    "        print(\"ID chưa tồn tại, vui lòng nhập lại!\")\n",
+    "    name = input(\"Nhập vào tên sản phẩm mới:\")\n",
+    "    D[ID] = name\n",
+    "    \n",
+    "def xoasanpham(D):\n",
+    "    while True:\n",
+    "        ID = input(\"Nhập vào ID (nhập 0 để thoát chức năng):\")\n",
+    "        if ID == \"0\": return\n",
+    "        if ID in D: break\n",
+    "        print(\"ID chưa tồn tại, vui lòng nhập lại!\")\n",
+    "    xacnhan = input(\"Bạn có muốn xóa sản phẩm \" + D[ID] + \" không? Nếu có nhập C, nếu không nhập bất kỳ:\")\n",
+    "    if xacnhan.lower() == \"c\":\n",
+    "        D.pop(ID)\n",
+    "        print(\"Bạn đã xóa sản phẩm!\")\n",
+    "        \n",
+    "D = {\"1\": \"Bún bò\", \"2\": \"Phở bò\"}\n",
+    "\n",
+    "print('''\n",
+    "Nhập H - hiển thị sản phẩm\n",
+    "Nhập T - thêm sản phẩm\n",
+    "Nhập S - sửa sản phẩm\n",
+    "Nhập X - xóa sản phẩm\n",
+    "Nhập 0 để thoát chương trình\n",
+    "''')\n",
+    "\n",
+    "while True:\n",
+    "    a = input(\"Nhập lệnh:\")\n",
+    "    if a == \"H\":\n",
+    "        hienthisanpham(D)\n",
+    "    elif a == \"T\":\n",
+    "        themsanpham(D)\n",
+    "    elif a == \"S\":\n",
+    "        suasanpham(D)\n",
+    "    elif a == \"X\":\n",
+    "        xoasanpham(D)\n",
+    "    elif a == \"0\":\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
