--- a/Buổi 22 - Thực hành Dictionary.ipynb
+++ b/Buổi 22 - Thực hành Dictionary.ipynb
@@ -344,19 +344,25 @@
   {
    "cell_type": "markdown",
    "id": "4881b7b0",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "#### Khai báo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "602c7b70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "coded = [0, 1, 2, 1, 2, 3, 4]"
+    "L_mahoa = [0, 1, 2, 1, 2, 3, 4]\n",
+    "D_mahoa = {'Đen': 0, 'Vàng': 1, 'Xanh': 2, 'Đỏ': 3, 'Hồng': 4}"
    ]
   },
   {
@@ -369,35 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "df4fb3a1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "<function decode at 0x00000248880C3F40>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m         decoded\u001b[38;5;241m.\u001b[39mappend(decoded[decode])\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m decoded\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoded\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Input \u001b[1;32mIn [24]\u001b[0m, in \u001b[0;36mdecode\u001b[1;34m(coded)\u001b[0m\n\u001b[0;32m      3\u001b[0m decoded \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m code \u001b[38;5;129;01min\u001b[39;00m coded:\n\u001b[1;32m----> 6\u001b[0m     decoded[decode] \u001b[38;5;241m=\u001b[39m \u001b[43mdecodes\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m      7\u001b[0m     decoded\u001b[38;5;241m.\u001b[39mappend(decoded[decode])\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m decoded\n",
-      "\u001b[1;31mKeyError\u001b[0m: <function decode at 0x00000248880C3F40>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def decode(coded):\n",
-    "    decodes = {'đen': 0, 'vàng': 1, 'xanh': 2, 'đỏ': 3, 'hồng': 4}\n",
-    "    decoded = []\n",
-    "    \n",
-    "    for code in coded:\n",
-    "        decoded[decode] = decodes[code]\n",
-    "        decoded.append(decoded[decode])\n",
-    "        \n",
-    "    return decoded\n",
+    "def mahoanguoc(L_mahoa,D_mahoa):\n",
+    "    D = {}\n",
+    "    L = []\n",
+    "    for i in D_mahoa:\n",
+    "        D[D_mahoa[i]] = i\n",
+    "    for i in L_mahoa:\n",
+    "        L.append(D[i])\n",
+    "    return L\n",
     "\n",
-    "print(decode(coded))"
+    "print(mahoanguoc(L_mahoa,D_mahoa))"
    ]
   },
   {
@@ -456,7 +448,12 @@
    "id": "9f73da45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "N = 5\n",
+    "M = 3\n",
+    "L_doankhach = [1,1,1,1,1,2,3]\n",
+    "L_phong = [0]*N ## tạo list có N số 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,7 +469,35 @@
    "id": "b19e56c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def main():\n",
+    "    so_phong = 0\n",
+    "    hetphong = False\n",
+    "    for doankhach in L_doankhach:\n",
+    "        while doankhach > 0:\n",
+    "            if hetphong == False: ## trường hợp còn phòng\n",
+    "                if doankhach > 1: ## đoàn khách còn hơn 1 người\n",
+    "                    L_phong[so_phong] = 2\n",
+    "                    doankhach -= 2\n",
+    "                else: ## đoàn khách chỉ còn 1 người\n",
+    "                    L_phong[so_phong] = 1\n",
+    "                    doankhach -= 1\n",
+    "                so_phong += 1\n",
+    "                if so_phong == N:\n",
+    "                    so_phong = 0\n",
+    "                    hetphong = True\n",
+    "            else: ## trường hợp hết phòng\n",
+    "                if L_phong[so_phong] == 1:\n",
+    "                    L_phong[so_phong] += 1\n",
+    "                    doankhach -= 1\n",
+    "                so_phong += 1\n",
+    "                if doankhach != 0 and so_phong == N:\n",
+    "                    print(\"Không thể xếp vì phòng đã hết\")\n",
+    "                    return\n",
+    "                \n",
+    "main()\n",
+    "print(L_phong)"
+   ]
   }
  ],
  "metadata": {
