--- a/Buổi 23 - Lớp và đổi tượng.ipynb
+++ b/Buổi 23 - Lớp và đổi tượng.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "40598ff8",
    "metadata": {},
    "outputs": [
@@ -56,23 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python căn bản\n",
-      "Nguyễn Tâm Điền\n"
+      "Nguyễn Tâm Điền đang dạy!\n"
      ]
     }
    ],
    "source": [
-    "class giangvien:     \n",
-    "    ten = \"Nguyễn Tâm Điền\"     \n",
-    "    mon = \"Python căn bản\"     \n",
-    "    def inten(self):         \n",
-    "        print(self.ten)       \n",
+    "class GiangVien():\n",
+    "    ten = \"Nguyễn Tâm Điền\"\n",
+    "    tuoi = 32\n",
+    "    def day(self):\n",
+    "        print(self.ten,\"đang dạy!\")\n",
     "        \n",
-    "dien = giangvien() \n",
+    "GiangVien_Dien = GiangVien()\n",
+    "GiangVien_Dien.day()\n",
+    "# GiangVien_Binh = GiangVien()\n",
+    "# GiangVien_Binh.ten = \"Võ Thanh Bình\"\n",
+    "# GiangVien_Binh.tuoi = 20\n",
     "\n",
-    "print(dien.mon) \n",
-    "\n",
-    "dien.inten()"
+    "# GiangVien_Dien.day()"
    ]
   },
   {
@@ -85,36 +86,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5358318d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Phạm Phương Đào Ngọc\n",
-      "Phạm Phương Đào Ngọc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class hoc_vien:\n",
-    "    name = \"Phạm Phương Đào Ngọc\"\n",
-    "    def print_name(self):\n",
-    "        print(self.name)\n",
+    "## tạo lớp HocVien với 2 thuộc tính: Tên và điểm số\n",
+    "## 1 hành vi: in ra tên và điểm số của cái đối tượng đó\n",
+    "## 1 hành vi: danhGiaNangLuc dùng để kiểm tra năng lực của đối tượng, nếu đối tượng có điểm > 5 thì in ra \"Đạt\"\n",
+    "## ngược lại, in ra \"Không đạt\"\n",
+    "class HocVien():\n",
+    "    ten = \"Nguyễn Việt Hoàn\"\n",
+    "    diem = 9\n",
+    "    def inThongTin(self):\n",
+    "        print(\"Tên:\",self.ten)\n",
+    "        print(\"Điểm số:\",self.diem)\n",
+    "    def danhGiaNangLuc(self):\n",
+    "        if self.diem > 5:\n",
+    "            print(\"Đạt\")\n",
+    "        else:\n",
+    "            print(\"Không đạt\")\n",
+    "    def setDiem(self,diem):\n",
+    "        ## nếu diem không thuộc trong khoảng từ 0 đến 10 thì diem của đối tượng không đổi\n",
+    "        ## ngược lại thì thay đổi diem của đối tượng theo biến diem\n",
+    "        if 0 <= diem <= 10:\n",
+    "            self.diem = diem\n",
     "        \n",
-    "ngoc = hoc_vien()\n",
+    "hoan = HocVien() ## hoan là 1 đối tượng\n",
+    "ngoc = HocVien()\n",
     "\n",
-    "print(ngoc.name)\n",
-    "\n",
-    "ngoc.print_name()"
+    "ngoc.setDiem(8)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b2481280",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Tham số self\n",
     "\n",
